--- a/laravel/public/demeter/elements/dem-login/dem-login.html
+++ b/laravel/public/demeter/elements/dem-login/dem-login.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" href="dem-login.css"/>
 	<iron-ajax
 		id="ajaxCASLogin"
-		url="/casLogin/"
+		url="../../../../CASLogin.php/"
 		method="GET">
 	</iron-ajax>
 
