CAS fixed now trying to route to CAS correctly.

--- a/laravel/public/demeter/elements/dem-login/dem-login.html
+++ b/laravel/public/demeter/elements/dem-login/dem-login.html
@@ -4,6 +4,8 @@
 	<iron-ajax
 		id="ajaxCASLogin"
 		url="/CASLogin.php"
+		last-response="{{casResponse}}"
+		on-response="ajaxCASLoginResponse"
 		method="GET">
 	</iron-ajax>
 
