--- a/laravel/public/demeter/elements/dem-login/dem-login.html
+++ b/laravel/public/demeter/elements/dem-login/dem-login.html
@@ -2,10 +2,10 @@
 	<template>
 	<link rel="stylesheet" href="dem-login.css"/>
 	<iron-ajax
-		id="ajaxCASLogin"
-		url="/CASLogin.php"
+		id="ajaxCASVerify"
+		url="/CASVerify.php"
 		last-response="{{casResponse}}"
-		on-response="ajaxCASLoginResponse"
+		on-response="ajaxCASVerifyResponse"
 		method="GET">
 	</iron-ajax>
 
