--- a/laravel/public/demeter/elements/dem-login/dem-login.html
+++ b/laravel/public/demeter/elements/dem-login/dem-login.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" href="dem-login.css"/>
 	<iron-ajax
 		id="ajaxCASVerify"
-		url="/CASVerify.php"
+		url="/CASCAll.php?check="
 		last-response="{{casResponse}}"
 		on-response="ajaxCASVerifyResponse"
 		method="GET">
