--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -5,7 +5,7 @@
 	<!-- "http://128.187.104.23:1337/instances/" -->
 	<iron-ajax
 		id="ajaxGetAllDB"
-		url="../../../../instances/"
+		url="/instances/"
 		method="GET"
 		last-response="{{databases}}"
 		on-response="ajaxGetAllDBResponse">
