--- a/laravel/public/demeter/elements/dem-login/dem-login.html
+++ b/laravel/public/demeter/elements/dem-login/dem-login.html
@@ -1,11 +1,18 @@
 <dom-module id="dem-login">
 	<template>
 	<link rel="stylesheet" href="dem-login.css"/>
-	<iron-ajax
+	<!-- <iron-ajax
 		id="ajaxCASVerify"
-		url="../../../../resources/"
+		url="/resources/"
 		last-response="{{casResponse}}"
 		on-response="ajaxCASVerifyResponse"
+		method="GET">
+	</iron-ajax> -->
+	<iron-ajax
+		id="ajaxVerifyLoggedIn"
+		url="/checkLogin"
+		last-response="{{status}}"
+		on-response="ajaxVerifyLoggedInResponse"
 		method="GET">
 	</iron-ajax>
 
