trying to fix the toolbar to show up correctly

--- a/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
+++ b/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
@@ -45,11 +45,11 @@
 
 		<!-- ALL PAGES -->
 		<neon-animated-pages id="pages" selected="[[selected]]">
-			<dem-login hide-toolbar="{{hideToolbar}}"></dem-login>
-			<dem-home edit-database="{{database}}"></dem-home>
-			<dem-help></dem-help>
-			<dem-create></dem-create>
-			<dem-edit database="{{database}}"></dem-edit>
+			<!-- 0 --><dem-login hide-toolbar="{{hideToolbar}}"></dem-login>
+			<!-- 1 --><dem-home edit-database="{{database}}"></dem-home>
+			<!-- 2 --><dem-help></dem-help>
+			<!-- 3 --><dem-create></dem-create>
+			<!-- 4 --><dem-edit database="{{database}}"></dem-edit>
 		</neon-animated-pages>
 	</div>
 	</template>
