trying to fix the hidden toolbar error

--- a/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
+++ b/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
@@ -35,7 +35,7 @@
 
 	<div class="all-pages-container">
 		<!-- HEADER TOOLBAR -->
-		<paper-toolbar id="titleToolbar" class="toolbar" hidden$="{{hideToolbar}}">
+		<paper-toolbar id="titleToolbar" class="toolbar" hidden="{{hideToolbar}}">
 			<div class="toolbar-title-top" on-click="goToHome">Demeter</div>
 			<div class="toolbar-title-bottom" on-click="goToHome">Database Creation and Managment System</div>
 			<paper-button class="toolbar-button-3" on-click="goToCreate" raised>Create</paper-button>
