fixing header information

--- a/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
+++ b/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
@@ -45,7 +45,7 @@
 
 		<!-- ALL PAGES -->
 		<neon-animated-pages id="pages" selected="[[selected]]">
-			<!-- 0 --><dem-login hide-toolbar="{{hideToolbar}}"></dem-login>
+			<!-- 0 --><dem-login></dem-login>
 			<!-- 1 --><dem-home edit-database="{{database}}"></dem-home>
 			<!-- 2 --><dem-help></dem-help>
 			<!-- 3 --><dem-create></dem-create>
