--- a/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
+++ b/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
@@ -24,7 +24,11 @@
 		method="POST"
 		last-response="{{createDBResponse}}">
 	</iron-ajax>
-
+	<iron-ajax
+		id="ajaxCasLogout"
+		url="/checkLogin"
+		method="GET">
+	</iron-ajax>
 <!-- Create a database -->
 	<!-- <iron-ajax
 		id="ajaxGetAllDB"
@@ -40,7 +44,7 @@
 			<div class="toolbar-title-bottom" on-click="goToHome">Database Creation and Managment System</div>
 			<paper-button class="toolbar-button-3" on-click="goToCreate" raised>Create</paper-button>
 			<paper-button class="toolbar-button-2" on-click="goToHelp" raised>Help</paper-button>
-			<paper-button class="toolbar-button" raised>Logout</paper-button>
+			<paper-button class="toolbar-button" on-click="casLogout" raised>Logout</paper-button>
 		</paper-toolbar>
 
 		<!-- ALL PAGES -->
