making things a bit more flashy

--- a/laravel/public/demeter/elements/dem-help/dem-help.html
+++ b/laravel/public/demeter/elements/dem-help/dem-help.html
@@ -2,7 +2,10 @@
 	<template>
 	<link rel="stylesheet" href="dem-help.css"/>
 		<div class="help-container">
-			Help Page
+			<h2>Help Page</h2>
+			<paper-material elevation="2" href="http://stackoverflow.com/questions/6200215/how-to-log-in-to-mysql-and-query-the-database-from-linux-terminal" class="help-button">
+				How To Log Into MySQL and query the database?
+			</paper-material>
 		</div>
 	</template>
 	<script src="dem-help.js"></script>
