--- a/laravel/public/demeter/include.html
+++ b/laravel/public/demeter/include.html
@@ -7,6 +7,7 @@
 <link rel="import" href="bower_components/paper-progress/paper-progress.html"/>
 <link rel="import" href="bower_components/paper-dropdown-menu/paper-dropdown-menu.html"/>
 <link rel="import" href="bower_components/paper-item/paper-item.html"/>
+<link rel="import" href="bower_components/iron-collapse/iron-collapse.html"/>
 
 <!-- Custome Elements -->
 <link rel="import" href="elements/dem-all-pages/dem-all-pages.html"/>
