--- a/laravel/public/demeter/elements/dem-help/dem-help.html
+++ b/laravel/public/demeter/elements/dem-help/dem-help.html
@@ -3,9 +3,12 @@
 	<link rel="stylesheet" href="dem-help.css"/>
 		<div class="help-container">
 			<h2>Help Page</h2>
-			<paper-material elevation="2" href="http://stackoverflow.com/questions/6200215/how-to-log-in-to-mysql-and-query-the-database-from-linux-terminal" class="help-button">
+			<paper-material elevation="2" on-click="openMySQL" class="help-button">
 				How To Log Into MySQL and query the database?
 			</paper-material>
+		<iron-collapse id="collapse">
+			<div>Content goes here...</div>
+		</iron-collapse>
 		</div>
 	</template>
 	<script src="dem-help.js"></script>
