--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -19,10 +19,10 @@
 					<h3 style="margin:5px;">[[database.NAME]]</h3>
 					<div>
 						<div class="card-left">
-							<span>Type: </span><br/>
-							<span>Organization: </span><br/>
-							<span>VM ID: </span><br/>
-							<span>Description: </span><br/>
+							<span homeText>Type: </span><br/>
+							<span homeText>Organization: </span><br/>
+							<span homeText>VM ID: </span><br/>
+							<span homeText>Description: </span><br/>
 						</div>
 						<div class="card-right">
 							<span>[[database.TYPE]]</span><br/>
