--- a/laravel/public/demeter/elements/dem-home/dem-home.html
+++ b/laravel/public/demeter/elements/dem-home/dem-home.html
@@ -18,11 +18,11 @@
 				<paper-material id="{{database.HTMLID}}" elevation="1" class="home-database-card" on-contextmenu="showRightClickMenu" oncontextmenu="return false" on-click="goToEditDatabase">
 					<h3 style="margin:5px;">[[database.NAME]]</h3>
 					<div>
-						<div class="card-left">
-							<span homeText>Type: </span><br/>
-							<span homeText>Organization: </span><br/>
-							<span homeText>VM ID: </span><br/>
-							<span homeText>Description: </span><br/>
+						<div class="card-left" id="homeCardLeft">
+							<span>Type: </span><br/>
+							<span>Organization: </span><br/>
+							<span>VM ID: </span><br/>
+							<span>Description: </span><br/>
 						</div>
 						<div class="card-right">
 							<span>[[database.TYPE]]</span><br/>
