--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -4,7 +4,7 @@
 	<iron-ajax
 		id="ajaxSendChanges"
 		url="/instances/"
-		method="POST"
+		method="PUT"
 		on-response="{{creationResponse}}">
 	</iron-ajax>
 
