last part was working this is a test

--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -1,12 +1,12 @@
 <dom-module id="dem-edit">
 	<template>
 	<link rel="stylesheet" href="dem-edit.css"/>
-	<!-- <iron-ajax
+	<iron-ajax
 		id="ajaxSendChanges"
 		url="/instances/"
 		method="PUT"
 		on-response="{{creationResponse}}">
-	</iron-ajax> -->
+	</iron-ajax>
 
 	<div class="edit-container">
 		<center>
