setting up creating a new database

--- a/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
+++ b/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
@@ -52,7 +52,7 @@
 			<!-- 0 --><dem-login></dem-login>
 			<!-- 1 --><dem-home edit-database="{{database}}"></dem-home>
 			<!-- 2 --><dem-help></dem-help>
-			<!-- 3 --><dem-create></dem-create>
+			<!-- 3 --><dem-create database="{{database}}"></dem-create>
 			<!-- 4 --><dem-edit database="{{database}}"></dem-edit>
 		</neon-animated-pages>
 	</div>
