--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -6,6 +6,7 @@
 			<paper-material elevation="1" class="create-database-card">
 				<h3>Create A New Database</h3>
 				Owner: <input class="create-input" placeholder="netId" value="{{inputOwner::input}}"></input><br/>
+				Organization: <input class="create-input" placeholder="My Database" value="{{inputOrg::input}}"></input>
 				Name: <input class="create-input" placeholder="My Database" value="{{inputName::input}}"></input>
 				Type: 
 				<paper-dropdown-menu id="typeDropdown" label="Select Type">
