correcting sending data

--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -11,9 +11,9 @@
 				Type: 
 				<paper-dropdown-menu id="typeDropdown" label="Select Type">
 				  	<paper-menu attr-for-selected="value" selected="Oracle" class="dropdown-content">
-					    <paper-item value="Oracle" on-click="selectType">Oracle</paper-item>
-					    <paper-item value="MongoDB" on-click="selectType">MongoDB</paper-item>
-					    <paper-item value="MySQL" on-click="selectType">MySQL</paper-item>
+					    <paper-item value="oracle" on-click="selectType">Oracle</paper-item>
+					    <paper-item value="mongodb" on-click="selectType">MongoDB</paper-item>
+					    <paper-item value="mysql" on-click="selectType">MySQL</paper-item>
 				  	</paper-menu>
 				</paper-dropdown-menu><br/>
 				Description: <input class="create-input" placeholder="This is my database..." value="{{inputDesc::input}}"></input>
