--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -13,7 +13,7 @@
 				  	<paper-menu attr-for-selected="value" selected="Oracle" class="dropdown-content">
 					    <paper-item value="oracle" on-click="selectType">Oracle</paper-item>
 					    <paper-item value="mongodb" on-click="selectType">MongoDB</paper-item>
-					    <paper-item value="mysql" on-click="selectType">MySQL</paper-item>
+					    <paper-item value="mysql" on-click="selectType">mysql</paper-item>
 				  	</paper-menu>
 				</paper-dropdown-menu><br/>
 				Description: <input class="create-input" placeholder="This is my database..." value="{{inputDesc::input}}"></input>
