--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -12,7 +12,7 @@
 				<paper-dropdown-menu id="typeDropdown" label="Select Type">
 				  	<paper-menu attr-for-selected="value" selected="Oracle" class="dropdown-content">
 					    <paper-item value="oracle" on-click="selectType">Oracle</paper-item>
-					    <paper-item value="mongodb" on-click="selectType">MongoDB</paper-item>
+					    <paper-item value="mongo" on-click="selectType">MongoDB</paper-item>
 					    <paper-item value="mysql" on-click="selectType">mysql</paper-item>
 				  	</paper-menu>
 				</paper-dropdown-menu><br/>
@@ -20,9 +20,9 @@
 				Size:
 				<paper-dropdown-menu id="sizeDropdown" label="Select Size">
 				  	<paper-menu attr-for-selected="value" selected="Oracle" class="dropdown-content">
-					    <paper-item value="Oracle" on-click="selectSize">2 GB</paper-item>
-					    <paper-item value="MongoDB" on-click="selectSize">4 GB</paper-item>
-					    <paper-item value="MySQL" on-click="selectSize">8 GB</paper-item>
+					    <paper-item value="2048" on-click="selectSize">2 GB</paper-item>
+					    <paper-item value="4096" on-click="selectSize">4 GB</paper-item>
+					    <paper-item value="8184" on-click="selectSize">8 GB</paper-item>
 				  	</paper-menu>
 				</paper-dropdown-menu><br/>
 				<paper-button raised class="create-button" on-click="createDB">Create</paper-button>
