setting up delete database options and testing.

--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -1,12 +1,12 @@
 <dom-module id="dem-edit">
 	<template>
 	<link rel="stylesheet" href="dem-edit.css"/>
-<!-- 	<iron-ajax
-		id="ajaxSendChanges"
+	<iron-ajax
+		id="ajaxDeleteDatabase"
 		url="/instances/"
-		method="PUT"
+		method="DEL"
 		on-response="{{creationResponse}}">
-	</iron-ajax> -->
+	</iron-ajax>
 
 	<div class="edit-container">
 		<center>
