--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -8,6 +8,9 @@
 		on-response="{{creationResponse}}">
 	</iron-ajax>
 
+	<div style="float:left">
+	TESTING
+	</div>
 	<div class="edit-container">
 		<center>
 			<paper-material id="editCard" elevation="1" class="edit-card">
