building new css

--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -8,7 +8,7 @@
 		on-response="{{creationResponse}}">
 	</iron-ajax>
 
-	<div style="float:left">
+	<div style="float:left;margin-top:10px;">
 	TESTING
 	</div>
 	<div class="edit-container">
