added new css rule

--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -8,8 +8,8 @@
 		on-response="{{creationResponse}}">
 	</iron-ajax>
 
-	<div style="float:left;margin-top:10px;">
-	TESTING
+	<div class="edit-left-container">
+		TESTING
 	</div>
 	<div class="edit-container">
 		<center>
