changing around the look to accommodate more features

--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -26,12 +26,7 @@
 	</iron-ajax>
 
 	<div class="edit-left-container">
-		<google-chart
-			type='pie'
-			options='{"title": "Distribution of days in 2001Q1"}'
-			cols='[{"label":"Month", "type":"string"}, {"label":"Days", "type":"number"}]'
-			rows='[["Jan", 31],["Feb", 28],["Mar", 31]]'>
-		</google-chart>
+		Usage Memory: <paper-progress class="info-progress-bar" value="10"></paper-progress><br/>
 	</div>
 	<div class="edit-container">
 		<center>
