adding new look

--- a/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
+++ b/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
@@ -54,6 +54,7 @@
 			<!-- 2 --><dem-help></dem-help>
 			<!-- 3 --><dem-create database="{{database}}"></dem-create>
 			<!-- 4 --><dem-edit database="{{database}}"></dem-edit>
+			<!-- 5 --><dem-db-info database="{{database}}"></dem-db-info>
 		</neon-animated-pages>
 	</div>
 	</template>
