--- a/laravel/public/demeter/include.html
+++ b/laravel/public/demeter/include.html
@@ -8,7 +8,7 @@
 <link rel="import" href="bower_components/paper-dropdown-menu/paper-dropdown-menu.html"/>
 <link rel="import" href="bower_components/paper-item/paper-item.html"/>
 <link rel="import" href="bower_components/google-chart/google-chart.html"/>
-<!-- <link rel="import" href="bower_components/iron-collapse/iron-collapse.html"/> -->
+<link rel="import" href="bower_components/iron-collapse/iron-collapse.html"/>
 
 <!-- Custome Elements -->
 <link rel="import" href="elements/dem-all-pages/dem-all-pages.html"/>
@@ -17,3 +17,4 @@
 <link rel="import" href="elements/dem-login/dem-login.html"/>
 <link rel="import" href="elements/dem-create/dem-create.html"/>
 <link rel="import" href="elements/dem-edit/dem-edit.html"/>
+<link rel="import" href="elements/dem-db-info/dem-db-info.html"/>
