--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -1,7 +1,27 @@
 <dom-module id="dem-db-info">
 	<template>
 	<link rel="stylesheet" href="dem-db-info.css"/>
-		DB-INFO
+		<div class="info-container">
+			<div class="info-left-container">
+				Database Size: [[database.SIZE]]<br/>
+				Amount Used: <paper-progress value="10" max="[[database.SIZE]]"></paper-progress><br/>
+				ID: [[database.ID]]<br/>
+				Last Updated: [[database.UPDATED]]<br/>
+				[[database.INUSE]]<br/>
+				Owner ID: [[database.OWNERID]]<br/>
+				Organization: [[database.ORGANIZATION]]<br/>
+				Database Description: [[database.DESCRIPTION]]<br/>
+				Database Type: [[database.TYPE]]<br/>
+				Database Name: [[database.NAME]]<br/>
+				Created At: [[database.CREATED]]<br/>
+			</div>
+			<div class="info-right-container">
+				VM Information:<br/>
+				VMID: [[database.VMID]]<br/>
+				VMIP: [[database.VMIP]]<br/>
+
+			</div>
+		</div>
 	</template>
 	<script src="dem-db-info.js"></script>
 </dom-module>
