--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -21,6 +21,10 @@
 				VMIP: [[database.VMIP]]<br/>
 
 			</div>
+			<div class="info-button-container">
+				<paper-button class="info-button" raised>Edit Database</paper-button>
+				<paper-button class="info-button" raised>Delete Database</paper-button>
+			</div>
 		</div>
 	</template>
 	<script src="dem-db-info.js"></script>
