--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -22,7 +22,7 @@
 
 			</div>
 			<div class="info-button-container">
-				<paper-button class="info-button" raised>Edit Database</paper-button>
+				<paper-button class="info-button" raised>Edit Database</paper-button><br/>
 				<paper-button class="info-button" raised>Delete Database</paper-button>
 			</div>
 		</div>
