changed some css and also added functionality to go to the edit database page again.

--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -29,7 +29,7 @@
 						</template>
 				</div>
 				<div class="info-button-container">
-					<paper-button class="info-button" raised>Edit Database</paper-button><br/>
+					<paper-button class="info-button" on-click="goToEdit" raised>Edit Database</paper-button><br/>
 					<paper-button class="info-button" raised>Delete Database</paper-button>
 				</div>
 			</center>
