--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -5,22 +5,23 @@
 			<center>
 				<div class="info-left-container">
 					<h3>Database Information:</h3>
-					Database Size: [[database.SIZE]]<br/>
-					Amount Used: <paper-progress value="10" max="[[database.SIZE]]"></paper-progress><br/>
-					ID: [[database.ID]]<br/>
-					Last Updated: [[database.UPDATED]]<br/>
+					<b>Database Size:</b> [[database.SIZE]]<br/>
+					<b>Amount Used:</b> <paper-progress value="10" max="[[database.SIZE]]"></paper-progress><br/>
+					<b>ID:</b> [[database.ID]]<br/>
+					<b>Last Updated:</b> [[database.UPDATED]]<br/>
 					[[database.INUSE]]<br/>
-					Owner ID: [[database.OWNERID]]<br/>
-					Organization: [[database.ORGANIZATION]]<br/>
-					Database Description: [[database.DESCRIPTION]]<br/>
-					Database Type: [[database.TYPE]]<br/>
-					Database Name: [[database.NAME]]<br/>
-					Created At: [[database.CREATED]]<br/>
+					<br/>
+					<b>Owner ID:</b> [[database.OWNERID]]<br/>
+					<b>Organization:</b> [[database.ORGANIZATION]]<br/>
+					<b>Database Description:</b> [[database.DESCRIPTION]]<br/>
+					<b>Database Type:</b> [[database.TYPE]]<br/>
+					<b>Database Name:</b> [[database.NAME]]<br/>
+					<b>Created At:</b> [[database.CREATED]]<br/>
 				</div>
 				<div class="info-right-container">
 					<h3>VM Information:</h3>
-					VMID: [[database.VMID]]<br/>
-					VMIP: [[database.VMIP]]<br/>
+					<b>VMID:</b> [[database.VMID]]<br/>
+					<b>VMIP:</b> [[database.VMIP]]<br/>
 				</div>
 				<div class="info-right-container">
 					<h3>User Information:</h3>
