--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -32,6 +32,8 @@
 				<div class="info-button-container">
 					<paper-button class="info-button" on-click="goToEdit" raised>Edit Database</paper-button><br/>
 					<paper-button class="info-button" raised>Delete Database</paper-button>
+					<br/>
+					<paper-button class="info-button" on-click="goToList"raised>Back To Database List</paper-button>
 				</div>
 			</center>
 		</div>
