--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -5,6 +5,7 @@
 			<center>
 				<div class="info-left-container">
 					<h3>Database Information:</h3>
+					<hr/>
 					<b>Database Size:</b> [[database.SIZE]]<br/>
 					<b>Amount Used:</b> <paper-progress value="10" max="[[database.SIZE]]"></paper-progress><br/>
 					<b>ID:</b> [[database.ID]]<br/>
@@ -20,23 +21,38 @@
 				</div>
 				<div class="info-right-container">
 					<h3>VM Information:</h3>
+					<hr/>
 					<b>VMID:</b> [[database.VMID]]<br/>
 					<b>VMIP:</b> [[database.VMIP]]<br/>
 				</div>
 				<div class="info-right-container">
 					<h3>User Information:</h3>
-						<template is="dom-repeat" items="{{database.USERS}}" as="user">
+					<hr/>
+					<template is="dom-repeat" items="{{database.USERS}}" as="user">
 						[[user]]<br/>
-						</template>
+					</template>
 				</div>
 				<div class="info-button-container">
 					<paper-button class="info-button" on-click="goToEdit" raised>Edit Database</paper-button><br/>
-					<paper-button class="info-button" raised>Delete Database</paper-button>
-					<br/><br/>
+					<paper-button class="info-button" on-click="showAddDialog" raised>Add User</paper-button><br/>
+					<paper-button class="info-button" raised>Delete Database</paper-button><br/>
+					<br/>
 					<paper-button class="info-button" on-click="goToList"raised>Back To Databases</paper-button>
 				</div>
 			</center>
 		</div>
+		<paper-dialog
+			id="addUserDialog"
+			entry-animation="scale-up-animation"
+			exit-animation="scale-down-animation"
+			modal>
+			<h2>Add A New User</h2>
+			<h3>Please fill out all the following fields</h3>
+			<input type="text" class="info-dialog-input" placeholder="netId" value="{{username::input}}"></input>
+			<input type="password" class="info-dialog-input" placeholder="password" value="{{password::input}}"></input>
+			<paper-button class="info-button" dialog-dismiss raised>Cancel</paper-button>
+			<paper-button class="info-button" raised>Continue</paper-button>
+		</paper-dialog>
 	</template>
 	<script src="dem-db-info.js"></script>
 </dom-module>
