--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -46,13 +46,13 @@
 			entry-animation="scale-up-animation"
 			exit-animation="scale-down-animation"
 			modal>
-			
+
 			<h2>Add A New User</h2>
 			<h3>Please fill out all the following fields</h3>
 			<input type="text" class="info-dialog-input" placeholder="netId" value="{{username::input}}"></input>
-			<input type="password" class="info-dialog-input" placeholder="password" value="{{password::input}}"></input>
-			<paper-button class="info-button" dialog-dismiss raised>Cancel</paper-button>
-			<paper-button class="info-button" raised>Continue</paper-button>
+			<input type="password" class="info-dialog-input" placeholder="password" value="{{password::input}}"></input><br/><br/>
+			<paper-button class="info-button" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
+			<paper-button class="info-button" style="float:right;" raised>Continue</paper-button>
 		</paper-dialog>
 	</template>
 	<script src="dem-db-info.js"></script>
