--- a/laravel/public/demeter/elements/dem-edit/dem-edit.html
+++ b/laravel/public/demeter/elements/dem-edit/dem-edit.html
@@ -51,6 +51,16 @@
 			</paper-material>
 		</center>
 	</div>
+	<paper-dialog
+		id="progressDialog"
+		entry-animation="scale-up-animation"
+		exit-animation="scale-down-animation"
+		modal>
+		<h3 hidden="[[processing]]">Sending Your Request, please wait...</h3>
+		<paper-spinner hidden="[[processing]]" active style="width:50px;height:50px;"></paper-spinner>
+		<h3 hidden="[[!processing]]">[[response]]</h3>
+		<paper-button raised hidden="[[!processing]]" class="edit-button" dialog-dismiss>Okay</paper-button>
+	</paper-dialog>
 	</template>
 	<script src="dem-edit.js"></script>
 </dom-module>
