--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -35,7 +35,7 @@
 				<div class="info-button-container">
 					<paper-button class="info-button" on-click="goToEdit" raised>Edit Database</paper-button><br/>
 					<paper-button class="info-button" on-click="showAddDialog" raised>Add User</paper-button><br/>
-					<paper-button class="info-button" raised>Delete Database</paper-button><br/>
+					<paper-button class="info-button" on-click="deleteDatabaseAjax" raised>Delete Database</paper-button><br/>
 					<br/>
 					<paper-button class="info-button" on-click="goToList"raised>Back To Databases</paper-button>
 				</div>
@@ -49,10 +49,10 @@
 
 			<h2>Add A New User</h2>
 			<h3>Please fill out all the following fields</h3>
-			<input type="text" class="info-dialog-input" placeholder="netId" value="{{username::input}}"></input>
+			<input type="text" class="info-dialog-input" placeholder="netId" value="{{username::input}}"></input><br/>
 			<input type="password" class="info-dialog-input" placeholder="password" value="{{password::input}}"></input><br/><br/>
 			<paper-button class="info-button" style="float:left;" dialog-dismiss raised>Cancel</paper-button>
-			<paper-button class="info-button" style="float:right;" raised>Continue</paper-button>
+			<paper-button class="info-button" style="float:right;" on-click="addUserAjax" dialog-confirm raised>Continue</paper-button>
 		</paper-dialog>
 	</template>
 	<script src="dem-db-info.js"></script>
