fixing return calls

--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -29,7 +29,7 @@
 					<h3>User Information:</h3>
 					<hr/>
 					<template is="dom-repeat" items="{{database.USERS}}" as="user">
-						[[user]]<br/>
+						[[user.name]]<br/>
 					</template>
 				</div>
 				<div class="info-button-container">
