--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -36,11 +36,25 @@
 					<paper-button class="info-button" on-click="goToEdit" raised>Edit Database</paper-button><br/>
 					<paper-button class="info-button" on-click="showAddDialog" raised>Add User</paper-button><br/>
 					<paper-button class="info-button" on-click="deleteDatabaseAjax" raised>Delete Database</paper-button><br/>
+					<paper-button class="info-button" on-click="deleteDatabaseAjax" raised>Delete Users</paper-button><br/>
 					<br/>
 					<paper-button class="info-button" on-click="goToList"raised>Back To Databases</paper-button>
 				</div>
 			</center>
 		</div>
+		<paper-dialog
+			id="deleteUserDialog"
+			entry-animation="scale-up-animation"
+			exit-animation="scale-down-animation"
+			modal>
+			<h2>Delete Database Users</h2>
+			<div style="overflow:scroll;">
+				<template is="dom-repeat" items="{{database.instance_users}}" as="user">
+					<div class="info-delete-user-scroll-item">{{user.name}}</div>
+				</template>
+			</div>
+			<paper-dialog raised class="info-dialog-input">Done</paper-dialog>
+		</paper-dialog>
 		<paper-dialog
 			id="addUserDialog"
 			entry-animation="scale-up-animation"
