more delete user stuff

--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -36,7 +36,7 @@
 					<paper-button class="info-button" on-click="goToEdit" raised>Edit Database</paper-button><br/>
 					<paper-button class="info-button" on-click="showAddDialog" raised>Add User</paper-button><br/>
 					<paper-button class="info-button" on-click="deleteDatabaseAjax" raised>Delete Database</paper-button><br/>
-					<paper-button class="info-button" on-click="deleteDatabaseAjax" raised>Delete Users</paper-button><br/>
+					<paper-button class="info-button" on-click="showDeleteDialog" raised>Delete Users</paper-button><br/>
 					<br/>
 					<paper-button class="info-button" on-click="goToList"raised>Back To Databases</paper-button>
 				</div>
