--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -48,7 +48,7 @@
 			exit-animation="scale-down-animation"
 			modal>
 			<h2>Delete Database Users</h2>
-			<div style="overflow:scroll;">
+			<div style="overflow:scroll;height:300px;">
 				<template is="dom-repeat" items="{{database.instance_users}}" as="user">
 					<div class="info-delete-user-scroll-item">{{user.name}}</div>
 				</template>
