--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -49,7 +49,7 @@
 			modal>
 			<h2>Delete Database Users</h2>
 			<div style="overflow:scroll;height:300px;">
-				<template is="dom-repeat" items="{{database.instance_users}}" as="user">
+				<template is="dom-repeat" items="{{database.USERS}}" as="user">
 					<div class="info-delete-user-scroll-item">{{user.name}}</div>
 				</template>
 			</div>
