--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -50,11 +50,12 @@
 			<h2>Delete Database Users</h2>
 			<div style="overflow:scroll;max-height:300px;height:auto;">
 				<template is="dom-repeat" items="{{database.USERS}}" as="user">
-					<paper-material elevation="1" class="info-delete-user-scroll-item">{{user.name}}</paper-material>
+					<paper-material elevation="1" class="info-delete-user-scroll-item" on-click="deleteUserAjax">{{user.name}}</paper-material>
 				</template>
 			</div>
 			<br/><br/>
-			<paper-dialog raised class="info-dialog-input">Done</paper-dialog>
+			<paper-button raised class="info-dialog-input" dialog-confirm>Done</paper-button>
+			</paper-dialog>
 		</paper-dialog>
 		<paper-dialog
 			id="addUserDialog"
