--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -47,7 +47,7 @@
 			entry-animation="scale-up-animation"
 			exit-animation="scale-down-animation"
 			modal>
-			<h2>Delete Database Users</h2>
+			<h2>Click To Delete Users</h2>
 			<div style="overflow:scroll;max-height:300px;height:auto;">
 				<template is="dom-repeat" items="{{database.USERS}}" as="user">
 					<paper-material elevation="1" class="info-delete-user-scroll-item" on-click="deleteUserAjax">{{user.name}}</paper-material>
