--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -50,7 +50,7 @@
 			<h2>Click To Delete Users</h2>
 			<div hidden="{{hideSpinner}}">Sending Requested Changes.</div>
 			<paper-spinner active hidden="{{hideSpinner}}" style="width:50px;height:50px;"></paper-spinner>
-			<div style="overflow:scroll;max-height:300px;height:auto;">
+			<div style="overflow:scroll;height:300px;">
 				<template is="dom-repeat" items="{{database.USERS}}" as="user">
 					<paper-material elevation="1" class="info-delete-user-scroll-item" on-click="deleteUserAjax">{{user.name}}</paper-material>
 				</template>
