--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -56,7 +56,7 @@
 				</template>
 			</div>
 			<br/><br/>
-			<paper-button raised class="info-dialog-input" dialog-confirm>Done</paper-button>
+			<paper-button class="info-dialog-input" raised dialog-confirm>Done</paper-button>
 			</paper-dialog>
 		</paper-dialog>
 		<paper-dialog
