fixing errors that appear in the console.

--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -32,7 +32,7 @@
 						[[user.name]]<br/>
 					</template>
 				</div>
-				<div class="info-button-container">
+				<div id="infoButtonContainer" class="info-button-container">
 					<paper-button class="info-button" on-click="goToEdit" raised>Edit Database</paper-button><br/>
 					<paper-button class="info-button" on-click="showAddDialog" raised>Add User</paper-button><br/>
 					<paper-button class="info-button" on-click="deleteDatabaseAjax" raised>Delete Database</paper-button><br/>
