testing to see if i can clean up some code.

--- a/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
+++ b/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
@@ -18,12 +18,12 @@
 	</iron-ajax>
 
 <!-- Create a database -->
-	<iron-ajax
+	<!-- <iron-ajax
 		id="ajaxCreateDB"
 		url="/instance/"
 		method="POST"
 		last-response="{{createDBResponse}}">
-	</iron-ajax>
+	</iron-ajax> -->
 	<iron-ajax
 		id="ajaxCasLogout"
 		url="/checkLogin"
