testing. seeing if we can remove some old code.

--- a/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
+++ b/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
@@ -2,20 +2,20 @@
 	<template>
 	<link rel="stylesheet" href="dem-all-pages.css"/>
 <!-- login through CAS -->
-	<iron-ajax
+	<!-- <iron-ajax
 		id="ajaxLoginUser"
 		url="128.187.104.23:1337/"
 		method=""
 		last-response="">
-	</iron-ajax>
+	</iron-ajax> -->
 
 <!-- All users -->
-	<iron-ajax
+	<!-- <iron-ajax
 		id="ajaxGetAllUsers"
 		url="/users"
 		method="GET"
 		last-response="{{allUsers}}">
-	</iron-ajax>
+	</iron-ajax> -->
 
 <!-- Create a database -->
 	<!-- <iron-ajax
@@ -24,11 +24,12 @@
 		method="POST"
 		last-response="{{createDBResponse}}">
 	</iron-ajax> -->
-	<iron-ajax
+	<!-- <iron-ajax
 		id="ajaxCasLogout"
 		url="/checkLogin"
 		method="GET">
-	</iron-ajax>
+	</iron-ajax> -->
+	
 <!-- Create a database -->
 	<!-- <iron-ajax
 		id="ajaxGetAllDB"
