testing a force update.

--- a/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
+++ b/laravel/public/demeter/elements/dem-all-pages/dem-all-pages.html
@@ -15,7 +15,7 @@
 		<!-- ALL PAGES -->
 		<neon-animated-pages id="pages" selected="[[selected]]">
 			<!-- 0 --><dem-login></dem-login>
-			<!-- 1 --><dem-home edit-database="{{database}}"></dem-home>
+			<!-- 1 --><dem-home id="demHome"edit-database="{{database}}"></dem-home>
 			<!-- 2 --><dem-help></dem-help>
 			<!-- 3 --><dem-create database="{{database}}"></dem-create>
 			<!-- 4 --><dem-edit database="{{database}}"></dem-edit>
