--- a/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
+++ b/laravel/public/demeter/elements/dem-db-info/dem-db-info.html
@@ -36,13 +36,13 @@
 					<paper-button class="info-button" on-click="goToEdit" raised>Edit Database</paper-button><br/>
 					<paper-button class="info-button" on-click="showAddDialog" raised>Add User</paper-button><br/>
 					<paper-button class="info-button" on-click="deleteDatabaseAjax" raised>Delete Database</paper-button><br/>
-					<paper-button class="info-button" on-click="deleteUserAjax" raised>Delete Users</paper-button><br/>
+					<paper-button class="info-button" on-click="showDeleteDialog" raised>Delete Users</paper-button><br/>
 					<br/>
 					<paper-button class="info-button" on-click="goToList"raised>Back To Databases</paper-button>
 				</div>
 			</center>
 		</div>
-		<!-- <paper-dialog
+		<paper-dialog
 			id="deleteUserDialog"
 			entry-animation="scale-up-animation"
 			exit-animation="scale-down-animation"
@@ -58,7 +58,7 @@
 			<br/><br/>
 			<paper-button class="info-dialog-input" raised dialog-confirm>Done</paper-button>
 			</paper-dialog>
-		</paper-dialog> -->
+		</paper-dialog>
 		<paper-dialog
 			id="addUserDialog"
 			entry-animation="scale-up-animation"
