--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -10,7 +10,7 @@
 						Owner:<br/>
 						Organization:<br/>
 						Name:<br/>
-						Type:<br/>
+						Type:<br/><br/><br/>
 						Size:<br/>
 						Description:<br/>
 					</div>
