--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -9,7 +9,7 @@
 					<div class="create-left-side">
 						Owner:<br/>
 						Organization:<br/>
-						Name:<br/>
+						Name:<br/><br/>
 						Type:<br/><br/>
 						Size:<br/>
 						Description:<br/>
