--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -9,9 +9,9 @@
 					<div class="create-left-side">
 						Owner:<br/>
 						Organization:<br/>
-						Name:<br/><br/>
-						Type:<br/><br/>
-						Size:<br/>
+						Name:<br/>
+						<div>Type:</div>
+						<div>Size:</div>
 						Description:<br/>
 					</div>
 					<div class="create-right-side">
