--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -10,7 +10,7 @@
 						Owner:<br/>
 						Organization:<br/>
 						Name:<br/>
-						<div>Type:</div>
+						<div style="margin-bottom:20px;margin-top:20px;">Type:</div>
 						<div>Size:</div>
 						Description:<br/>
 					</div>
