testing help pages

--- a/laravel/public/demeter/elements/dem-help/dem-help.html
+++ b/laravel/public/demeter/elements/dem-help/dem-help.html
@@ -6,6 +6,9 @@
 			<paper-material elevation="2" on-click="openMySQL" class="help-button">
 				How To Log Into MySQL and query the database?
 			</paper-material>
+			<paper-material elevation="2" href="http://dev.mysql.com/doc/refman/5.7/en/create-user.html" class="help-button">
+				How To Log Into MySQL and query the database?
+			</paper-material>
 		<iron-collapse id="collapse">
 			<div>Content goes here...</div>
 		</iron-collapse>
