fixing template repeat

--- a/laravel/public/demeter/elements/dem-help/dem-help.html
+++ b/laravel/public/demeter/elements/dem-help/dem-help.html
@@ -4,7 +4,7 @@
 		<div class="help-container">
 			<h2>Help Page</h2>
 			<center>
-				<template is="dom-repeat" repeat="{{externalLinks}}">
+				<template is="dom-repeat" repeat="{{externalLinks}}" as="item">
 					<paper-material elevation="2" href="{{item.link}}" class="help-button">
 						{{item.description}}
 					</paper-material>
