changing what data we will be sending back as part of our ajax

--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -7,7 +7,7 @@
 				<h3>Create A New Database</h3>
 				<center>
 					<div class="create-left-side">
-						Owner:<br/>
+						<!-- Owner:<br/> -->
 						Organization:<br/>
 						Name:<br/>
 						<div style="margin-bottom:25px;margin-top:25px;">Type:</div>
@@ -15,8 +15,8 @@
 						Description:<br/>
 					</div>
 					<div class="create-right-side">
-						<input class="create-input" placeholder="netId" value="{{inputOwner::input}}">
-						</input><br/>
+						<!-- <input class="create-input" placeholder="netId" value="{{inputOwner::input}}"> -->
+						<!-- </input><br/> -->
 						<input class="create-input" placeholder="My Database" value="{{inputOrg::input}}">
 						</input><br/>
 						<input class="create-input" placeholder="My Database" value="{{inputName::input}}">
