--- a/laravel/public/demeter/elements/dem-create/dem-create.html
+++ b/laravel/public/demeter/elements/dem-create/dem-create.html
@@ -23,8 +23,8 @@
 						</input><br/>
 						<paper-dropdown-menu id="typeDropdown" label="Select Type">
 						  	<paper-menu attr-for-selected="value" selected="{{selectedDB}}" class="dropdown-content">
-							    <paper-item value="oracle" on-click="selectType">Oracle</paper-item>
-							    <paper-item value="mongo" on-click="selectType">MongoDB</paper-item>
+							    <paper-item value="oracle" on-click="selectType">oracle</paper-item>
+							    <paper-item value="mongo" on-click="selectType">mongo</paper-item>
 							    <paper-item value="mysql" on-click="selectType">mysql</paper-item>
 						  	</paper-menu>
 						</paper-dropdown-menu><br/>
